--- a/OMDB/ETL_OMDB_API.ipynb
+++ b/OMDB/ETL_OMDB_API.ipynb
@@ -9,7 +9,18 @@
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
-    "from config import api_key"
+    "from config import api_key\n",
+    "import pymongo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = 'mongodb://localhost:27017'\n",
+    "client = pymongo.MongoClient(conn)"
    ]
   },
   {
@@ -3948,43 +3959,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title\n",
-      "Year\n",
-      "Rated\n",
-      "Released\n",
-      "Runtime\n",
-      "Genre\n",
-      "Director\n",
-      "Writer\n",
-      "Actors\n",
-      "Plot\n",
-      "Language\n",
-      "Country\n",
-      "Awards\n",
-      "Poster\n",
-      "Ratings\n",
-      "Metascore\n",
-      "imdbRating\n",
-      "imdbVotes\n",
-      "imdbID\n",
-      "Type\n",
-      "DVD\n",
-      "BoxOffice\n",
-      "Production\n",
-      "Website\n",
-      "Response\n",
-      "Error\n",
-      "totalSeasons\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in hanks_movies.columns: \n",
     "    print(col) "
@@ -3992,8 +3969,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -4452,6 +4438,392 @@
    "source": [
     "hanks2 = hanks_movies.drop(columns=['Website','DVD','Error','totalSeasons', 'Poster','Response','BoxOffice'])\n",
     "hanks2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0\n",
+      "character\n",
+      "credit_id\n",
+      "poster_path\n",
+      "id\n",
+      "video\n",
+      "vote_count\n",
+      "adult\n",
+      "backdrop_path\n",
+      "genre_ids\n",
+      "original_language\n",
+      "original_title\n",
+      "popularity\n",
+      "title\n",
+      "vote_average\n",
+      "overview\n",
+      "release_date\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in tom_hanks_df.columns: \n",
+    "    print(col) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>character</th>\n",
+       "      <th>credit_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>video</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>backdrop_path</th>\n",
+       "      <th>genre_ids</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>overview</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Forrest Gump</td>\n",
+       "      <td>52fe420ec3a36847f800074f</td>\n",
+       "      <td>13</td>\n",
+       "      <td>False</td>\n",
+       "      <td>19059</td>\n",
+       "      <td>/7c9UVPPiTPltouxRVY6N9uugaVA.jpg</td>\n",
+       "      <td>[35, 18, 10749]</td>\n",
+       "      <td>43.096</td>\n",
+       "      <td>Forrest Gump</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>A man with a low IQ has accomplished great thi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Paul Edgecomb</td>\n",
+       "      <td>52fe424ac3a36847f8012bc7</td>\n",
+       "      <td>497</td>\n",
+       "      <td>False</td>\n",
+       "      <td>11093</td>\n",
+       "      <td>/5Nz25DPXfQaSpDgce42Y3kFg9G4.jpg</td>\n",
+       "      <td>[80, 18, 14]</td>\n",
+       "      <td>30.824</td>\n",
+       "      <td>The Green Mile</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>A supernatural tale set on death row in a Sout...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jim Lovell</td>\n",
+       "      <td>52fe4253c3a36847f801595d</td>\n",
+       "      <td>568</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3702</td>\n",
+       "      <td>/AfGp6Ev3BVdEd7L99kGQzOzsqRb.jpg</td>\n",
+       "      <td>[18, 36]</td>\n",
+       "      <td>17.536</td>\n",
+       "      <td>Apollo 13</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>The true story of technical troubles that scut...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Robert Langdon</td>\n",
+       "      <td>52fe4259c3a36847f8017445</td>\n",
+       "      <td>591</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6579</td>\n",
+       "      <td>/rbeXab3IISrxL7jVPjb7jZ4TdeE.jpg</td>\n",
+       "      <td>[53, 9648]</td>\n",
+       "      <td>22.546</td>\n",
+       "      <td>The Da Vinci Code</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>A murder in Paris’ Louvre Museum and cryptic c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Viktor Navorski</td>\n",
+       "      <td>52fe4259c3a36847f801762f</td>\n",
+       "      <td>594</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5168</td>\n",
+       "      <td>/zywtNiaZ9r7azrcNdl2j0jOgrkw.jpg</td>\n",
+       "      <td>[35, 18]</td>\n",
+       "      <td>16.185</td>\n",
+       "      <td>The Terminal</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>Viktor Navorski is a man without a country; hi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>59e392f79251410b670002c4</td>\n",
+       "      <td>32694</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[35, 99]</td>\n",
+       "      <td>3.618</td>\n",
+       "      <td>The Rutles 2: Can't Buy Me Lunch</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>Twenty-three years after the release of the or...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>Himself (archive footage)</td>\n",
+       "      <td>5dd3b664356a715875e9eed6</td>\n",
+       "      <td>558912</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[99]</td>\n",
+       "      <td>4.359</td>\n",
+       "      <td>Beyond Boundaries: The Harvey Weinstein Scandal</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>Examine the rise and fall of Hollywood media m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>Self (archive footage) (uncredited)</td>\n",
+       "      <td>5f5aa8efec0c580038a462e8</td>\n",
+       "      <td>1165</td>\n",
+       "      <td>False</td>\n",
+       "      <td>804</td>\n",
+       "      <td>/7HmIVY3drZ3KSugRcyazn1Wf3U9.jpg</td>\n",
+       "      <td>[18]</td>\n",
+       "      <td>14.427</td>\n",
+       "      <td>The Queen</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>The Queen is an intimate behind the scenes gli...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>Himself - Host</td>\n",
+       "      <td>5cb28f639251411ed620788c</td>\n",
+       "      <td>31107</td>\n",
+       "      <td>True</td>\n",
+       "      <td>12</td>\n",
+       "      <td>/q1VtWiZlmI6bYmgpH8iomBIWd9w.jpg</td>\n",
+       "      <td>[10402]</td>\n",
+       "      <td>6.199</td>\n",
+       "      <td>The 25th Anniversary Rock and Roll Hall of Fam...</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>Featuring performances from two groundbreaking...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>(voice)</td>\n",
+       "      <td>5f7cd9a48741c40038821fe3</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7961</td>\n",
+       "      <td>/77P56ZcL8M9Cw7FIptMIGjhNJoj.jpg</td>\n",
+       "      <td>[28, 12, 878]</td>\n",
+       "      <td>8.171</td>\n",
+       "      <td>Transformers</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>Young teenager, Sam Witwicky becomes involved ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>121 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               character                 credit_id      id  \\\n",
+       "0                           Forrest Gump  52fe420ec3a36847f800074f      13   \n",
+       "1                          Paul Edgecomb  52fe424ac3a36847f8012bc7     497   \n",
+       "2                             Jim Lovell  52fe4253c3a36847f801595d     568   \n",
+       "3                         Robert Langdon  52fe4259c3a36847f8017445     591   \n",
+       "4                        Viktor Navorski  52fe4259c3a36847f801762f     594   \n",
+       "..                                   ...                       ...     ...   \n",
+       "116                                  NaN  59e392f79251410b670002c4   32694   \n",
+       "117            Himself (archive footage)  5dd3b664356a715875e9eed6  558912   \n",
+       "118  Self (archive footage) (uncredited)  5f5aa8efec0c580038a462e8    1165   \n",
+       "119                       Himself - Host  5cb28f639251411ed620788c   31107   \n",
+       "120                              (voice)  5f7cd9a48741c40038821fe3    1858   \n",
+       "\n",
+       "     video  vote_count                     backdrop_path        genre_ids  \\\n",
+       "0    False       19059  /7c9UVPPiTPltouxRVY6N9uugaVA.jpg  [35, 18, 10749]   \n",
+       "1    False       11093  /5Nz25DPXfQaSpDgce42Y3kFg9G4.jpg     [80, 18, 14]   \n",
+       "2    False        3702  /AfGp6Ev3BVdEd7L99kGQzOzsqRb.jpg         [18, 36]   \n",
+       "3    False        6579  /rbeXab3IISrxL7jVPjb7jZ4TdeE.jpg       [53, 9648]   \n",
+       "4    False        5168  /zywtNiaZ9r7azrcNdl2j0jOgrkw.jpg         [35, 18]   \n",
+       "..     ...         ...                               ...              ...   \n",
+       "116  False           4                               NaN         [35, 99]   \n",
+       "117  False           5                               NaN             [99]   \n",
+       "118  False         804  /7HmIVY3drZ3KSugRcyazn1Wf3U9.jpg             [18]   \n",
+       "119   True          12  /q1VtWiZlmI6bYmgpH8iomBIWd9w.jpg          [10402]   \n",
+       "120  False        7961  /77P56ZcL8M9Cw7FIptMIGjhNJoj.jpg    [28, 12, 878]   \n",
+       "\n",
+       "     popularity                                              title  \\\n",
+       "0        43.096                                       Forrest Gump   \n",
+       "1        30.824                                     The Green Mile   \n",
+       "2        17.536                                          Apollo 13   \n",
+       "3        22.546                                  The Da Vinci Code   \n",
+       "4        16.185                                       The Terminal   \n",
+       "..          ...                                                ...   \n",
+       "116       3.618                   The Rutles 2: Can't Buy Me Lunch   \n",
+       "117       4.359    Beyond Boundaries: The Harvey Weinstein Scandal   \n",
+       "118      14.427                                          The Queen   \n",
+       "119       6.199  The 25th Anniversary Rock and Roll Hall of Fam...   \n",
+       "120       8.171                                       Transformers   \n",
+       "\n",
+       "     vote_average                                           overview  \n",
+       "0             8.5  A man with a low IQ has accomplished great thi...  \n",
+       "1             8.5  A supernatural tale set on death row in a Sout...  \n",
+       "2             7.4  The true story of technical troubles that scut...  \n",
+       "3             6.7  A murder in Paris’ Louvre Museum and cryptic c...  \n",
+       "4             7.3  Viktor Navorski is a man without a country; hi...  \n",
+       "..            ...                                                ...  \n",
+       "116           7.4  Twenty-three years after the release of the or...  \n",
+       "117           6.2  Examine the rise and fall of Hollywood media m...  \n",
+       "118           7.0  The Queen is an intimate behind the scenes gli...  \n",
+       "119           8.3  Featuring performances from two groundbreaking...  \n",
+       "120           6.7  Young teenager, Sam Witwicky becomes involved ...  \n",
+       "\n",
+       "[121 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hanks3 = tom_hanks_df.drop(columns=['Unnamed: 0','poster_path','adult','original_language', 'original_title','release_date'])\n",
+    "hanks3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "character\n",
+      "credit_id\n",
+      "id\n",
+      "video\n",
+      "vote_count\n",
+      "backdrop_path\n",
+      "genre_ids\n",
+      "popularity\n",
+      "title\n",
+      "vote_average\n",
+      "overview\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in hanks3.columns: \n",
+    "    print(col) \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title\n",
+      "Year\n",
+      "Rated\n",
+      "Released\n",
+      "Runtime\n",
+      "Genre\n",
+      "Director\n",
+      "Writer\n",
+      "Actors\n",
+      "Plot\n",
+      "Language\n",
+      "Country\n",
+      "Awards\n",
+      "Ratings\n",
+      "Metascore\n",
+      "imdbRating\n",
+      "imdbVotes\n",
+      "imdbID\n",
+      "Type\n",
+      "Production\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in hanks2.columns: \n",
+    "    print(col) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hanks_TMDB\n",
+    "-\n",
+    "character varchar\n",
+    "credit_id varchar\n",
+    "id int\n",
+    "video varchar\n",
+    "vote_count int\n",
+    "backdrop_path varchar\n",
+    "genre_ids int\n",
+    "popularity int\n",
+    "title PK varchar\n",
+    "vote_average int\n",
+    "overview varchar"
    ]
   }
  ],
