final load of data into SQL

--- a/OMDB/ETL_OMDB_API.ipynb
+++ b/OMDB/ETL_OMDB_API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = 'mongodb://localhost:27017'\n",
-    "client = pymongo.MongoClient(conn)"
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -4807,23 +4806,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Individual Index</th>\n",
+       "      <th>Selection Index</th>\n",
+       "      <th>Movie Selection 1</th>\n",
+       "      <th>Movie Genre</th>\n",
+       "      <th>Other</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Birth Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Joe Versus the Volcano</td>\n",
+       "      <td>Horror</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Big</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>History</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Splash</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Big</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1991</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Individual Index  Selection Index       Movie Selection 1 Movie Genre  \\\n",
+       "0                 1                1  Joe Versus the Volcano      Horror   \n",
+       "1                 2                1                     Big       Drama   \n",
+       "2                 3                1            Philadelphia     History   \n",
+       "3                 4                1                  Splash       Drama   \n",
+       "4                 5                1                     Big       Drama   \n",
+       "\n",
+       "  Other  Gender Birth Year  \n",
+       "0   NaN    Male       1992  \n",
+       "1   NaN  Female       1990  \n",
+       "2   NaN  Female       1981  \n",
+       "3   NaN  Female       1988  \n",
+       "4   NaN    Male       1991  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_file = \"../SurveyMonkey/Resources/TomHanksMoviesIndexed.csv\"\n",
+    "survey_data_df = pd.read_csv(csv_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Individual_Index</th>\n",
+       "      <th>Selection_Index</th>\n",
+       "      <th>Movie_Selection_1</th>\n",
+       "      <th>Movie_Genre</th>\n",
+       "      <th>Other</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Birth_Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Joe Versus the Volcano</td>\n",
+       "      <td>Horror</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Big</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>History</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Splash</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Big</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1991</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Individual_Index  Selection_Index       Movie_Selection_1 Movie_Genre  \\\n",
+       "0                 1                1  Joe Versus the Volcano      Horror   \n",
+       "1                 2                1                     Big       Drama   \n",
+       "2                 3                1            Philadelphia     History   \n",
+       "3                 4                1                  Splash       Drama   \n",
+       "4                 5                1                     Big       Drama   \n",
+       "\n",
+       "  Other  Gender Birth_Year  \n",
+       "0   NaN    Male       1992  \n",
+       "1   NaN  Female       1990  \n",
+       "2   NaN  Female       1981  \n",
+       "3   NaN  Female       1988  \n",
+       "4   NaN    Male       1991  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "survey_data_df.rename(columns = {'Individual Index':'Individual_Index', 'Selection Index':'Selection_Index', 'Movie Selection 1':'Movie_Selection_1','Movie Genre':'Movie_Genre'}, inplace=True)\n",
+    "survey_data_df.rename(columns = {'Birth Year':'Birth_Year'}, inplace=True)\n",
+    "survey_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hanks_TMDB\n",
-    "-\n",
-    "character varchar\n",
-    "credit_id varchar\n",
-    "id int\n",
-    "video varchar\n",
-    "vote_count int\n",
-    "backdrop_path varchar\n",
-    "genre_ids int\n",
-    "popularity int\n",
-    "title PK varchar\n",
-    "vote_average int\n",
-    "overview varchar"
+    "rds_connection_string = \"postgres:<YOURPASSWORD>@localhost:5432/tom_hanks\"\n",
+    "engine = create_engine(f'postgresql://{rds_connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hanks_OMDB', 'hanks_survey', 'hanks_TMDB']"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survey_data_df.to_sql(name='hanks2', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survey_data_df.to_sql(name='hanks3', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survey_data_df.to_sql(name='survey_data_df', con=engine, if_exists='append', index=False)"
    ]
   }
  ],
